--- a/functions/save-post/Cargo.toml
+++ b/functions/save-post/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ytakada-dev-core = { path = "../../ytakada-dev-core", version = "0.1.0" }
+anyhow = "1.0.66"
 lambda_http = "0.7.0"
 serde_json = "1.0.86"
 tokio = { version = "1.21.2", features = ["full"] }
+ytakada-dev-core = { path = "../../ytakada-dev-core", version = "0.1.0" }
+ytakada-dev-driver = { path = "../../ytakada-dev-driver", version = "0.1.0" }
