--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,29 @@ services:
       - "localstack-volume:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
   mongo:
-    image: mongo:6.0
+    image: mongo
+    restart: always
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME-root}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD-password}
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - 27017:27017
     volumes:
-      - mongo-volume:/data/db
+      - mongo-db-volume:/data/db
+      - mongo-config-volume:/data/configdb
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_SERVER: mongo
+    depends_on:
+      - mongo
 
 volumes:
   localstack-volume:
-  mongo-volume:
+  mongo-db-volume:
+  mongo-config-volume:
