chore: Update dev env.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,41 @@
 version: "3.9"
 
 services:
+  devel:
+    build: .
+    environment:
+      - LOCALSTACK_HOSTNAME=localstack
+      - AWS_REGION=ap-northeast-1
+    volumes:
+      - .:/work
+      - target:/work/target
   localstack:
-    image: localstack/localstack
-    ports:
-      - "127.0.0.1:4566:4566"
-      - "127.0.0.1:4510-4559:4510-4559"
     environment:
       - DEBUG=${DEBUG-}
       - PERSISTENCE=${PERSISTENCE-}
       - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
       - DOCKER_HOST=unix:///var/run/docker.sock
-    volumes:
-      - "localstack-volume:/var/lib/localstack"
-      - "/var/run/docker.sock:/var/run/docker.sock"
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+    image: localstack/localstack
     ports:
-      - 27017:27017
+      - 127.0.0.1:4566:4566
+      - 127.0.0.1:4510-4559:4510-4559
     volumes:
-      - mongo-db-volume:/data/db
-      - mongo-config-volume:/data/configdb
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
+      - localstack-store:/var/lib/localstack
+      - /var/run/docker.sock:/var/run/docker.sock
+  mysql:
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_SERVER: mongo
-    depends_on:
-      - mongo
+      - TZ=Asia/Tokyo
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=local
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+    image: mysql:8.0
+    ports:
+      - 3306:3306
+    volumes:
+      - mysql-store:/var/lib/mysql
 
 volumes:
-  localstack-volume:
-  mongo-db-volume:
-  mongo-config-volume:
+  localstack-store:
+  mysql-store:
+  target:
