--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
+    "ytakada-dev-adapter",
     "ytakada-dev-core",
-    "ytakada-dev-driver",
     "functions/save-post",
 ]
